UPDT (application .properties for sample

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,39 @@
-spring.application.name=Auth
+
+server.port=8000
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Connection Pool (HikariCP tuning)
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=20000
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=60000
+
+
+# Must be at least 32 characters for HS256
+jwt.secret=qwertyuioasdfghjkqwertyuio2345678
+
+
+jwt.access-expiration=9000000
+
+
+jwt.refresh-expiration=6004800000
+
+
+logging.level.org.springframework.security=INFO
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.springframework.web=INFO
+
